<resources>
    <string name="app_name">Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">\u00F7</string>
    <string name="plus">\u002B</string>
    <string name="equal">\u003D</string>
    <string name="minus">\u002D</string>
    <string name="multiply">\u00D7</string>
    <string name="zero">0</string>
    <string name="dot">\u00B7</string>
    <string name="parenthesis">\u0028 \u0029</string>
    <string name="percentage">\u0025</string>
    <string name="clear">C</string>
    <string name="test">\u002B\u002F\u002D</string>
</resources>
